Changes to the output format and how settings are stored

--- a/.settings
+++ b/.settings
@@ -2299,4 +2299,543 @@ I7
 sS'derived_start'
 p735
 I6
-sb.
+sb.(ccopy_reg
+_reconstructor
+p0
+(cdedupe.predicates
+CompoundPredicate
+p1
+c__builtin__
+object
+p2
+Ntp3
+Rp4
+(dp5
+S'predicates'
+p6
+(g0
+(cdedupe.predicates
+SimplePredicate
+p7
+g2
+Ntp8
+Rp9
+(dp10
+S'__name__'
+p11
+S'(doubleMetaphone, address)'
+p12
+sS'func'
+p13
+cdedupe.predicates
+doubleMetaphone
+p14
+sS'field'
+p15
+S'address'
+p16
+sbg0
+(cdedupe.predicates
+TfidfNGramCanopyPredicate
+p17
+g2
+Ntp18
+Rp19
+(dp20
+S'threshold'
+p21
+F0.2
+sg11
+S'(0.2, community)'
+p22
+sg15
+S'community'
+p23
+sbtp24
+sg11
+V(SimplePredicate: (doubleMetaphone, address), TfidfNGramCanopyPredicate: (0.2, community))
+p25
+sbg0
+(g1
+g2
+Ntp26
+Rp27
+(dp28
+g6
+(g0
+(g7
+g2
+Ntp29
+Rp30
+(dp31
+g11
+S'(latLongGridPredicate, geocode)'
+p32
+sg13
+cdedupe.predicates
+latLongGridPredicate
+p33
+sg15
+S'geocode'
+p34
+sbg0
+(g7
+g2
+Ntp35
+Rp36
+(dp37
+g11
+S'(sameSevenCharStartPredicate, community)'
+p38
+sg13
+cdedupe.predicates
+sameSevenCharStartPredicate
+p39
+sg15
+g23
+sbtp40
+sg11
+V(SimplePredicate: (latLongGridPredicate, geocode), SimplePredicate: (sameSevenCharStartPredicate, community))
+p41
+sbg0
+(g1
+g2
+Ntp42
+Rp43
+(dp44
+g6
+(g0
+(cdedupe.predicates
+TfidfTextCanopyPredicate
+p45
+g2
+Ntp46
+Rp47
+(dp48
+g21
+F0.2
+sg11
+S'(0.2, address)'
+p49
+sg15
+g16
+sbg0
+(g7
+g2
+Ntp50
+Rp51
+(dp52
+g11
+S'(commonThreeTokens, community)'
+p53
+sg13
+cdedupe.predicates
+commonThreeTokens
+p54
+sg15
+g23
+sbtp55
+sg11
+V(TfidfTextCanopyPredicate: (0.2, address), SimplePredicate: (commonThreeTokens, community))
+p56
+sbg0
+(g1
+g2
+Ntp57
+Rp58
+(dp59
+g6
+(g0
+(g7
+g2
+Ntp60
+Rp61
+(dp62
+g11
+S'(sameSevenCharStartPredicate, address)'
+p63
+sg13
+g39
+sg15
+g16
+sbg30
+tp64
+sg11
+V(SimplePredicate: (sameSevenCharStartPredicate, address), SimplePredicate: (latLongGridPredicate, geocode))
+p65
+sbg0
+(g1
+g2
+Ntp66
+Rp67
+(dp68
+g6
+(g0
+(g7
+g2
+Ntp69
+Rp70
+(dp71
+g11
+S'(sortedAcronym, address)'
+p72
+sg13
+cdedupe.predicates
+sortedAcronym
+p73
+sg15
+g16
+sbg0
+(g7
+g2
+Ntp74
+Rp75
+(dp76
+g11
+S'(commonThreeTokens, city)'
+p77
+sg13
+g54
+sg15
+S'city'
+p78
+sbtp79
+sg11
+V(SimplePredicate: (sortedAcronym, address), SimplePredicate: (commonThreeTokens, city))
+p80
+sbg0
+(g1
+g2
+Ntp81
+Rp82
+(dp83
+g6
+(g30
+g0
+(g17
+g2
+Ntp84
+Rp85
+(dp86
+g21
+F0.8
+sg11
+S'(0.8, address)'
+p87
+sg15
+g16
+sbtp88
+sg11
+V(SimplePredicate: (latLongGridPredicate, geocode), TfidfNGramCanopyPredicate: (0.8, address))
+p89
+sbg0
+(g1
+g2
+Ntp90
+Rp91
+(dp92
+g6
+(g30
+g0
+(g7
+g2
+Ntp93
+Rp94
+(dp95
+g11
+S'(doubleMetaphone, community)'
+p96
+sg13
+g14
+sg15
+g23
+sbtp97
+sg11
+V(SimplePredicate: (latLongGridPredicate, geocode), SimplePredicate: (doubleMetaphone, community))
+p98
+sbg0
+(g1
+g2
+Ntp99
+Rp100
+(dp101
+g6
+(g19
+g0
+(g17
+g2
+Ntp102
+Rp103
+(dp104
+g21
+F0.2
+sg11
+S'(0.2, state)'
+p105
+sg15
+S'state'
+p106
+sbtp107
+sg11
+V(TfidfNGramCanopyPredicate: (0.2, community), TfidfNGramCanopyPredicate: (0.2, state))
+p108
+sbtp109
+.(dp0
+S'state'
+p1
+(dp2
+S'TfidfNGramCanopyPredicate'
+p3
+c__builtin__
+set
+p4
+((lp5
+VMD
+p6
+aVCO
+p7
+aVTX
+p8
+aVMN
+p9
+aVGA
+p10
+aVIN
+p11
+atp12
+Rp13
+ssS'community'
+p14
+(dp15
+g3
+g4
+((lp16
+Vtm
+p17
+aVen
+p18
+aVve
+p19
+aVee
+p20
+aVnd
+p21
+aVak
+p22
+aVea
+p23
+aVal
+p24
+aVan
+p25
+aVge
+p26
+aVar
+p27
+aVil
+p28
+aVTh
+p29
+aVid
+p30
+aVes
+p31
+aVer
+p32
+aVrt
+p33
+aVni
+p34
+aVle
+p35
+aVla
+p36
+aVll
+p37
+aVeA
+p38
+aVts
+p39
+aVng
+p40
+aVre
+p41
+aVpa
+p42
+aVra
+p43
+aVte
+p44
+aVnt
+p45
+aVri
+p46
+aVrk
+p47
+aVoo
+p48
+aVde
+p49
+aVSt
+p50
+aVsA
+p51
+aVhe
+p52
+aVme
+p53
+aVro
+p54
+aVCo
+p55
+aVne
+p56
+aVVi
+p57
+aVst
+p58
+aVAp
+p59
+aVPa
+p60
+aVow
+p61
+aVCr
+p62
+aVou
+p63
+aVta
+p64
+atp65
+Rp66
+ssS'address'
+p67
+(dp68
+g3
+g4
+((lp69
+Vva
+p70
+aVen
+p71
+aVev
+p72
+aVve
+p73
+aVNo
+p74
+aVee
+p75
+aViv
+p76
+aVut
+p77
+aVar
+p78
+aVad
+p79
+aVet
+p80
+aVRo
+p81
+aVes
+p82
+aVer
+p83
+aVrt
+p84
+aV00
+p85
+aVle
+p86
+aV20
+p87
+aVla
+p88
+aVll
+p89
+aVLa
+p90
+aVtr
+p91
+aVne
+p92
+aVrd
+p93
+aVre
+p94
+aVth
+p95
+aVDr
+p96
+aVri
+p97
+aVrk
+p98
+aVwa
+p99
+aVWe
+p100
+aVSt
+p101
+aVay
+p102
+aV01
+p103
+aVSo
+p104
+aVan
+p105
+aV11
+p106
+aV10
+p107
+aVnu
+p108
+aV30
+p109
+aVEa
+p110
+aV50
+p111
+aVoa
+p112
+aVst
+p113
+aVul
+p114
+aVPa
+p115
+aVBo
+p116
+aVAv
+p117
+aVue
+p118
+aVou
+p119
+atp120
+Rp121
+sS'TfidfTextCanopyPredicate'
+p122
+g4
+((lp123
+S'North'
+p124
+aS'West'
+p125
+aS'Drive'
+p126
+aS'Street'
+p127
+aS'South'
+p128
+aS'East'
+p129
+aS'Avenue'
+p130
+aS'Road'
+p131
+atp132
+Rp133
+ss.
