Removed multiprocessing until further notice.

--- a/ruleset.yaml
+++ b/ruleset.yaml
@@ -14,6 +14,18 @@ replace:
   trl: "Trail"
   ter: "Terrace"
 
+  '#varies': ''
+  '#various': ''
+
+  and: ''
+  the: ''
+  of: ''
+  apartment: ''
+  apartments: ''
+  luxury: ''
+  home: ''
+  homes: ''
+
   n: "North"
   s: "South"
   e: "East"
